--- a/FluiFramework.UWP.Core/FluiFramework.UWP.Core.csproj
+++ b/FluiFramework.UWP.Core/FluiFramework.UWP.Core.csproj
@@ -171,8 +171,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\FF-logo-64x.png" />
-    <Content Include="Assets\FF-logo.png" />
+    <Content Include="Assets\Logo\FF-logo-64x.png" />
+    <Content Include="Assets\Logo\FF-logo.png" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
