- Added ComboBox Style - Fixed Subbody text from not displaying correctly after switching themes

--- a/FluiFramework.UWP.Core/FluiFramework.UWP.Core.csproj
+++ b/FluiFramework.UWP.Core/FluiFramework.UWP.Core.csproj
@@ -153,6 +153,14 @@
     <Folder Include="Controls\" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Styles\ComboBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\ComboBox1809.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\TextBlock.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
